--- a/docker/app/Sports_Location/resources/lang/ja.json
+++ b/docker/app/Sports_Location/resources/lang/ja.json
@@ -5,8 +5,13 @@
   "Reset Password": "パスワード再設定",
   "Send Password Reset Link":  "パスワード再設定URLを送信",
 
+  "Username": "ユーザーネーム",
   "Name": "お名前",
+  "Kana": "フリガナ",
   "Email Address": "メールアドレス",
+  "Tel": "電話番号",
+  "Birthday": "生年月日",
+  "Gender": "性別",
   "Password": "パスワード",
   "Confirm Password": "パスワード(確認用)",
   "Remember Me": "ログイン状態を保存",
