--- a/docker/app/Sports_Location/resources/lang/ja.json
+++ b/docker/app/Sports_Location/resources/lang/ja.json
@@ -43,5 +43,7 @@
   "Number":"募集人数",
   "Deadline":"締め切り日時",
   "Confirm":"確認する",
-  "Status":"募集ステータス"
+  "Status":"募集ステータス",
+  "Create":"作成する",
+  "Update":"更新する"
 }
