[Update]イベントCRUD機能

--- a/docker/app/Sports_Location/resources/lang/ja.json
+++ b/docker/app/Sports_Location/resources/lang/ja.json
@@ -32,6 +32,7 @@
   "Image":"画像",
   "Title":"タイトル",
   "Area":"エリア",
+  "Genre":"ジャンル",
   "Location":"会場名",
   "Date":"開催日",
   "Start_time":"開始時刻",
