[Update]User(Update)

--- a/docker/app/Sports_Location/resources/lang/ja.json
+++ b/docker/app/Sports_Location/resources/lang/ja.json
@@ -47,5 +47,8 @@
   "Status":"募集ステータス",
   "Create":"作成する",
   "Update":"更新する",
-  "Back":"戻る"
+  "Back":"戻る",
+  "Profile_image":"プロフィール画像",
+  "Introduction":"紹介文",
+  "Unsubscribe":"退会する"
 }
